# urim

./: .env  .env.example  AGENT_AUTONOMY.md  AVAIL_FEEDBACK.md  Anchor.toml  COMPLETE_REBUILD_NOTES.md  CONTRACT_FIXES.md  CORRECTED_IMPLEMENTATION.md  Cargo.toml  FRONTEND_INTEGRATION.md  GRANTS_AND_MONETIZATION.md  IMPLEMENTATION_GUIDE.md  LICENSE  PLAN.md  QUEST_11_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  bunfig.toml  hardhat.config.ts  heartbeat.md  index.html  mainnet-config.json  package-lock.json  package.json  skill.md  tailwind.config.ts  vercel.json  vite.config.ts
agent/: agent-log.jsonl  price-agent.ts
contracts/: FiftyFiftyRaffle.sol  HondurasPresidentialElectionMarket  MockERC20.sol  PredictionMarket.sol  PythUrimQuantumMarket.sol  UrimMarket.sol  UrimQuantumMarket.sol  UrimQuantumYesNoUMA.sol
deployed/: deployedAddresses.json
keeper-deploy/: devnet-config.json  keeper.js  keeper.ts  package.json  urim_solana.json
programs/mineral-futures/: Cargo.toml
programs/mineral-futures/src/: lib.rs
programs/urim-solana/: Cargo.toml
public/: tarcaster.json
public/.well-known/: farcaster.json
scripts/: check-vaults.ts  collect-fees.ts  deploy-test.ts  deploy.ts  devnet-test.ts  emergency-withdraw.ts  init-mainnet.ts  init-program.ts  mint-to-user.ts  place-bet-urim.ts  resolve-round.ts  round-keeper.ts  setup-devnet.ts  start-round.ts  test-full-flow.ts
src/: App.tsx  index.css  main.tsx  wagmi.config.ts
src/components/: ActiveQuantumMarkets.tsx  ArchivedAvailBackup.jsx  (+24 more)
supabase/: config.toml
tests/: mineral-futures.ts  urim-solana.ts
(+67 files in other folders)
