[package]
name = "mineral-futures"
version = "0.1.0"
description = "On-chain perpetual futures for strategic minerals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mineral_futures"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
